--- a/mobdev-ionic-intro/src/app/pages/film-details/film-details.page.html
+++ b/mobdev-ionic-intro/src/app/pages/film-details/film-details.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>filmsDetails</ion-title>
+    <ion-title>filmDetails</ion-title>
   </ion-toolbar>
 </ion-header>
 
