--- a/mobdev-ionic-intro/src/app/pages/film-details/film-details.page.html
+++ b/mobdev-ionic-intro/src/app/pages/film-details/film-details.page.html
@@ -7,6 +7,11 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
-
+<!-- <ion-content class="ion-padding"> -->
+<ion-content>
+  <ion-card *ngIf="film">
+    <ion-card-content>
+    {{ film.opening_crawl }}
+    </ion-card-content>
+  </ion-card>
 </ion-content>
