--- a/mobdev-ionic-intro/src/app/pages/film-details/film-details.page.html
+++ b/mobdev-ionic-intro/src/app/pages/film-details/film-details.page.html
@@ -3,7 +3,8 @@
     <ion-buttons slot="start">
       <ion-back-button defaulthref="/tabs/films"></ion-back-button>
     </ion-buttons>
-    <ion-title>Details</ion-title>
+    <!-- <ion-title>Details</ion-title> -->
+    <ion-title>{{ film?.title }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
