--- a/mobdev-ionic-intro/src/app/pages/films/films.page.html
+++ b/mobdev-ionic-intro/src/app/pages/films/films.page.html
@@ -12,7 +12,8 @@
 	
 <ion-content>
   <ion-list>
-    <ion-item button detail lines="inset" *ngFor="let film of (films | async)?.results" (click)="openDetails(film)">
+    <!-- <ion-item button detail lines="inset" *ngFor="let film of (films | async)?.results" (click)="openDetails(film)"> -->
+    <ion-item button detail lines="inset" *ngFor="let film of (films | async)?.results" (click)="displayFilmDetails(film)">
       {{ film.title }}
     </ion-item>
   </ion-list>
